docs: add module system documentation for event decoding
Document requirements for event types when using reflection-based
instantiation on Java 9+ with the module system.

- Add comprehensive Javadoc to Abi.decodeEvents() explaining:
  - Supported target types (List, Object[], custom records/classes)
  - Module system requirements (public types, exported packages)
  - Usage example with public record
- Add Javadoc to InternalAbi.mapToEventType() about module limitations
- Catch InaccessibleObjectException with helpful error message
- Add tests for event decoding to List.class, Object[].class, and
  public record types

Addresses HIGH-3 from code review.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>